# httpstat

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  agents.md  httpstat.py  httpstat_test.sh  pyproject.toml  setup.py
kb/plans/: format-option.md
kb/sessions/: 2026-04-08-create-httpstat-diagnostics-skill.md
skills/httpstat/: SKILL.md
skills/httpstat/evals/: evals.json
tests/: test_httpstat.py
