[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "httpstat"
dynamic = ["version"]
description = "curl statistics made simple"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "reorx", email = "novoreorx@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/reorx/httpstat"

[project.scripts]
httpstat = "httpstat:main"

[tool.setuptools]
py-modules = ["httpstat"]

[tool.setuptools.dynamic]
version = { attr = "httpstat.__version__" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
